test/functions/deitz/iterators/test_zip_check1.good
(1, 1)
(2, 2)
(3, 3)
(4, 4)
test_zip_check1.chpl:1: error: halt reached - zippered iterations have non-equal lengths
